test/corpus/tests.txt
==============
Partials
==============
{{> main}}
---
(source_file
	(partial))
=============
Dynamic partials
=============
{{> (lookup this "fish")}}
---
(source_file
	(partial
		template:
		(helper_call
			(context_reference)
			(string))))
=========
Nested helpers
=========
{{ escape six (unescape "three") five four}}
---
(source_file
	(helper_call
		(context_reference)
		(helper_call
			(string))
		(context_reference)
		(context_reference)))
